public/labs/a4/Challenge/index.css
body {
    background-color: black;
}

.border {
    border: none !important;
}
.list-group-item {
    background-color: black;
    color: white;
    padding: 15px;
}

.wd-image img {
    height: 40px;
    width: 40px;
}

.wd-image-logo img {
    height: 70px;
    width: 70px;
}

.col-auto > .list-group > .active {
    background-color: black;
    border-style: none;
    font-weight: bold;
}

.d-none {
    margin-left: 7px;
}
.d-none .list-group > .border-gray {
    background-color: rgba(22,24,28,255);
}

.d-none .list-group > .round-bot {
    border-bottom-right-radius: 15px;
    border-bottom-left-radius: 15px;
}

.d-none .list-group > .round-top {
    border-top-right-radius: 15px;
    border-top-left-radius: 15px;
}

.d-none .list-group > .border-gray > a{
    text-decoration: none;
    color: rgba(26,110,168,255);
}
.btn-primary {
    color: black;
    background-color: white;
    padding-left: 6px;
}

.col-auto > .list-group > .btn-primary{
    background-color: rgba(30,155,240,255);
    color: white;
    font-weight: bold;
}

.wd-border {
    border-left: 1px darkslategray solid;
    border-right: 1px darkslategray solid;
    padding: 0;
}

.col-10 {
    padding-left: 1em !important;
}

.fa-gear {
    color: white;
    padding-left: 20px;
    padding-right: 20px;
}

.col-7 > .border {
    border-style: none !important;
    padding-bottom: 5px;
    padding-top:10px;
}
.text-black {
    color: white !important;
}

.nav {
    border-bottom: white;
    margin-bottom: 1px;
}
.nav-link {
    color: rgba(84,92,98,255);
}

.nav-tabs .nav-link {
    background-color: black !important;
    border-style: none !important;
}
.nav-item > .active {
    border-bottom-color: #1c9bf0 !important;
    border-bottom-style: solid !important;
    border-bottom-width: 5px !important;
    color: white !important;
}
.text-secondary {
    color: rgba(84,92,98,255) !important;
}

.col-10 > input {
    background-color: #212327;
    border-style: none;
    margin-left: 10px;
}

.fontAwesome {
    font-family: "Helvetica", FontAwesome, sans-serif;
}

.wd-tc {
    font-size: 10px;
    text-decoration: none;
    color: gray;
}

